# temper-syntax

./: .gitignore  README.md  config.temper.md  temper-pygments-lexer.temper.md
temper-pygments/: README.md  pyproject.toml  scripts.py
temper-pygments/temper_pygments/: __init__.py  adapt.py  lexer.py
temper-pygments/tests/: test_lexer.py  test_temper.py  test_tempermd.py
temper-syntax/: config.temper.md  imports.temper.md  lib.temper.md  pygments.temper.md  temper-pygments.temper.md  tempermd-pygments.temper.md
temper-syntax/pygments/: pygments.temper.md
temper-syntax/temper-pygments/: temper-pygments.temper.md  tempermd-pygments.temper.md
temper-syntax/temper.out/std/java/src/main/java/temper/std/config/: ConfigGlobal.java
temper-syntax/temper.out/std/java/src/main/java/temper/std/regex/: Capture.java  CodeRange.java  CompiledRegex.java  Core.java  Or.java  Regex.java  RegexFormatter.java  RegexGlobal.java  RegexRefs.java  Repeat.java  Sequence.java  Word.java
temper-syntax/temper.out/std/java/src/main/java/temper/std/temporal/: TemporalGlobal.java
temper-syntax/temper.out/std/java/src/main/java/temper/std/temporal__preface/: TemporalPrefaceGlobal.java
temper-syntax/temper.out/std/java/src/main/java/temper/std/testing/: TestFixtureBase.java  TestingGlobal.java
temper-syntax/temper.out/std/js/: regex.js  temporal.js  temporal__preface.js  testing.js
temper-syntax/temper.out/std/py/: pyproject.toml
temper-syntax/temper.out/std/py/temper_std/: regex.py  temporal.py  testing.py
temper-syntax/temper.out/temper-core/java/: pom.xml
temper-syntax/temper.out/temper-core/java/src/main/java/temper/core/: Core.java
temper-syntax/temper.out/temper-core/js/: index.js  interface-types.js  package.json
temper-syntax/temper.out/temper-core/py/: pyproject.toml
temper-syntax/temper.out/temper-core/py/temper_core/: __init__.py
temper-syntax/temper.out/temper-std/java/: pom.xml
temper-syntax/temper.out/temper-std/java/src/main/java/temper/std/config/: ConfigGlobal.java
temper-syntax/temper.out/temper-std/java/src/main/java/temper/std/regex/: Begin.java  Capture.java  CodePart.java  CodePoints.java  CodeRange.java  CodeSet.java  CompiledRegex.java  Digit.java  Group.java  Or.java  Regex.java  RegexFormatter.java  RegexGlobal.java  RegexRefs.java  Repeat.java  (+2 more)
temper-syntax/temper.out/temper-std/js/: config.js  package.json  regex.js  regex__preface.js  testing.js  testing__preface.js
temper-syntax/temper.out/temper-std/py/: pyproject.toml
temper-syntax/temper.out/temper-std/py/temper_std/: config.py  regex.py  testing.py
temper-syntax/temper.out/temper-syntax/java/: pom.xml
temper-syntax/temper.out/temper-syntax/java/src/main/java/temper_syntax/config/: ConfigMain.java
temper-syntax/temper.out/temper-syntax/java/src/main/java/temper_syntax/pygments/: ByGroups.java  Kind.java  Rule.java  Using.java
temper-syntax/temper.out/temper-syntax/java/src/main/java/temper_syntax/pygments__preface/: PygmentsPrefaceGlobal.java  PygmentsPrefaceMain.java
temper-syntax/temper.out/temper-syntax/java/src/main/java/temper_syntax/temper_pygments/: TemperLexer.java  TemperPygmentsGlobal.java
temper-syntax/temper.out/temper-syntax/java/src/main/java/temper_syntax/temper_pygments__preface/: TemperPygmentsPrefaceGlobal.java  TemperPygmentsPrefaceMain.java
temper-syntax/temper.out/temper-syntax/java/src/main/java/temper_syntax/tempermd_pygments/: TemperMdLexer.java  TempermdPygmentsGlobal.java  TempermdPygmentsMain.java
temper-syntax/temper.out/temper-syntax/java/src/main/java/temper_syntax/tempermd_pygments__preface/: TempermdPygmentsPrefaceMain.java
temper-syntax/temper.out/temper-syntax/js/: config.js  package.json  pygments.js  temper-pygments.js  temper-pygments__preface.js  tempermd-pygments.js  tempermd-pygments__preface.js
temper-syntax/temper.out/temper-syntax/py/: pyproject.toml
temper-syntax/temper.out/temper-syntax/py/temper_syntax/: pygments.py  temper_pygments.py  tempermd_pygments.py
temper.out/std/java/: pom.xml
temper.out/std/java/src/main/java/temper/std/regex/: CodePoints.java  CodeSet.java  Dot.java  End.java  Group.java  RegexFormatter.java  Space.java  Special.java  SpecialSet.java
temper.out/std/java/src/main/java/temper/std/temporal/: TemporalGlobal.java
temper.out/std/java/src/main/java/temper/std/testing/: TestingGlobal.java
temper.out/std/js/: config.js  package.json  regex.js  regex__preface.js  temporal.js  temporal__preface.js  testing.js  testing__preface.js
temper.out/std/py/: pyproject.toml
temper.out/std/py/temper_std/: config.py  regex.py  temporal.py  temporal__preface.py  testing.py
temper.out/temper-core/java/: pom.xml
temper.out/temper-core/java/src/main/java/temper/core/: Core.java
temper.out/temper-core/js/: index.js  regex.js
temper.out/temper-core/py/: pyproject.toml
temper.out/temper-core/py/temper_core/: __init__.py  regex.py
temper.out/temper-pygments-lexer/py/: pyproject.toml
temper.out/temper-pygments-lexer/py/temper_pygments_lexer/: config.py  temper_pygments_lexer.py
temper.out/temper-std/py/temper_std/: regex.py  testing.py
temper.out/temper-syntax/java/: pom.xml
temper.out/temper-syntax/java/src/main/java/temper_syntax/config/: ConfigGlobal.java
temper.out/temper-syntax/java/src/main/java/temper_syntax/pygments/: Include.java  Inherit.java  PygmentsGlobal.java  PygmentsMain.java  RuleOption.java  TokenKind.java
temper.out/temper-syntax/java/src/main/java/temper_syntax/temper_pygments/: TemperLexer.java  TemperPygmentsGlobal.java  TemperPygmentsMain.java
temper.out/temper-syntax/java/src/main/java/temper_syntax/tempermd_pygments__preface/: TempermdPygmentsPrefaceGlobal.java
temper.out/temper-syntax/js/: config.js  package.json  pygments.js  temper-pygments.js  tempermd-pygments.js  tempermd-pygments__preface.js
temper.out/temper-syntax/py/: pyproject.toml
temper.out/temper-syntax/py/temper_syntax/: config.py  pygments.py  temper_pygments.py  tempermd_pygments.py
(+3 files in other folders)
