[project]
name = "temper-pygments-lexer"
version = "0.0.1"
description = ""
readme = ""
requires-python = "~=3.6"
license = {text = ""}
authors = [ ]
maintainers = [ ]
keywords = [ ]
classifiers = [ ]
urls = { }
dependencies = [
    "temper-core == 0.0.3"
]
packages = [{ include = "temper_pygments_lexer" }]

[project.scripts]

[project.gui-scripts]

[project.entry-points]


[tool.poetry]
name = "temper-pygments-lexer"
version = "0.0.1"
license = ""
description = ""
authors = [ ]
packages = [{ include = "temper_pygments_lexer" }]
include = ["temper_pygments_lexer/**/*"]

[tool.poetry.dependencies]
python = "^3.6"
temper-core = "0.0.3"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_functions = "test_[!_]*"
python_files = "test_*.py"
python_classes = "*"
testpaths = ["tests"]
