[project]
name = "temper-syntax"
version = "0.1.0"
description = ""
readme = ""
requires-python = "~=3.8"
license = {text = ""}
authors = [  ]

maintainers = [ ]
keywords = [ ]
classifiers = [ ]
urls = { }
dependencies = [
    "temper-core == 0.0.5"
]

[project.scripts]

[project.gui-scripts]

[project.entry-points]


[tool.poetry]
name = "temper-syntax"
version = "0.1.0"
license = ""
description = ""
authors = [  ]

packages = [{ include = "temper_syntax" }]
include = ["temper_syntax/**/*", "./**/*.so"]

[tool.poetry.dependencies]
python = "^3.8"
temper-core = "0.0.5"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_functions = "test_[!_]*"
python_files = "test_*.py"
python_classes = "Test__*"
testpaths = ["tests"]
