[project]
name = "temper-std"
version = "0.0.3"
description = ""
readme = ""
requires-python = "~=3.8"
license = {text = "Apache-2.0"}
authors = [ ]
maintainers = [ ]
keywords = [ ]
classifiers = [ ]
urls = { }
dependencies = [
    "temper-core == 0.0.3"
]

[project.scripts]

[project.gui-scripts]

[project.entry-points]


[tool.poetry]
name = "temper-std"
version = "0.0.3"
license = "Apache-2.0"
description = ""
authors = [ ]
packages = [{ include = "temper_std" }]
include = ["temper_std/**/*", "./**/*.so"]

[tool.poetry.dependencies]
python = "^3.8"
temper-core = "0.0.3"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_functions = "test_[!_]*"
python_files = "test_*.py"
python_classes = "*"
testpaths = ["tests"]
